<resources>
    <string name="app_name">KanDatabase</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">View Settings</string>
    <string name="Add_New">Add New</string>
    <string name="View_All">View All</string>
    <string name="edit">Edit Contact</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">DisplayContact</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Town</string>
    <string name="country">City/State</string>
    <string name="save">Save Contact</string>
    <string name="deleteContact">Please Confirm!!,Are you sure you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="nothing">No contacts</string>
    <string name="pref">Preference</string>

    <string name="user_settings">User settings</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>

    <string name="pref_user_profile">User Profile</string>
    <string name="pref_update_setting">Update Settings</string>

    <string name="sendMessage">Write a message to broadcast!</string>
    <string name="myBroadcastIntent">Broadcast</string>
</resources>
